complete typecast pattern, splitted map/set semantics, started set literal pattern semantics (this commit does not build)